--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
   build:
     commands:
       - echo "Building Docker Image"
-      - docker login -u "$DOCKER_HUB_USERNAME" -p "$DOCKER_HUB_PASSWORD" "$DOCKER_HUB_URL"
+      - echo "$DOCKER_HUB_PASSWORD" | docker login -u "$DOCKER_HUB_USERNAME" --password-stdin "$DOCKER_HUB_URL"
       - docker build -t "$DOCKER_HUB_URL/$DOCKER_HUB_USERNAME/flaskapp:latest" .
       - docker push "$DOCKER_HUB_URL/$DOCKER_HUB_USERNAME/flaskapp:latest"
   post_build:
